welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:13: error: not found: value faireF
avance(2);avance(2);faireF(Color.green);faireF(Color.cyan);
                    ^FlowerPot:13: error: not found: value faireF
avance(2);avance(2);faireF(Color.green);faireF(Color.cyan);
                                        ^FlowerPot:14: error: not found: value faireF
avance();gauche();avance();faireF(Color.orange);faireF(Color.pink); 
                           ^FlowerPot:14: error: not found: value faireF
avance();gauche();avance();faireF(Color.orange);faireF(Color.pink); 
                                                ^